--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,17 @@
 # Site settings
 title: Your awesome title
-email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://royhewitt.com" # the base hostname & protocol for your site
+
+email: royhewitt07@gmail.com
+twitter_username: r0yhewitt
+github_username:  rhewitt22
+
+highlighter: rouge
 
 # Build settings
 markdown: kramdown
