--- a/.gitignore
+++ b/.gitignore
@@ -35,5 +35,6 @@ build/
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
 
-# Ignore build folder
+# Ignore built folders
 /_site
+/css
