--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,8 @@
 # Site settings
-title: Your awesome title
+title: GIS 520 Portfolio
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Roy Hewitt's GIS 520 Course Portfolio as part of the NC State
+  Master's in GIS & Technology Certificate Program
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://royhewitt.com" # the base hostname & protocol for your site
 
