--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,8 @@ build/
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
 
-# Ignore built folders
+# Ignore built files/folders
 /_site
 /css
+*feed.xml
+
